tests/expectations/parser/functions/annotated_arg_not_ident_fail.out
Error [EPAR0370005]: expected an identifier, ')', 'address, 'mapping' -- found '?'
    --> test:3:6
     |
   3 | @foo(?, bar, ?)
     |      ^
Error [EPAR0370005]: expected '=' -- found ','
    --> test:3:12
     |
   3 | @foo(?, bar, ?)
     |            ^
Error [EPAR0370005]: expected an identifier, ')', 'address, 'mapping' -- found '?'
    --> test:3:14
     |
   3 | @foo(?, bar, ?)
     |              ^
Error [EPAR0370005]: expected an identifier, ')', 'address, 'mapping' -- found '123'
    --> test:8:6
     |
   8 | @bar(123)
     |      ^^^
